sidebar menu height on mobile fix

--- a/src/scss/blocks/_sidebar.scss
+++ b/src/scss/blocks/_sidebar.scss
@@ -8,10 +8,10 @@
 		position: absolute;
 		top: 0;
 		left: -100vw;
-		bottom: 0;
 		z-index: 1000;
 		justify-content: flex-start;
 		width: 100vw;
+		height: 100vh;
 		padding: 100px 20px 40px 50px;
 		background-color: #fff;
 		box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
